force-app/main/default/objects/At_Risk__c/At_Risk__c.object-meta.xml
<CustomObject>
    <label>At Risk</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>At Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>At Risk</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>