force-app/main/default/objects/At_Risk__c/fields/Asset_Product__c.field-meta.xml
<CustomField>
    <fullName>Asset_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>At Risk</relationshipLabel>
    <relationshipName>At_Risk</relationshipName>
    <type>Lookup</type>
</CustomField>