force-app/main/default/objects/At_Risk__c/fields/Asset_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Asset_Product_Family__c</fullName>
    <formula>TEXT(Asset_Product__r.Family)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Product Family</label>
    <type>Text</type>
</CustomField>