force-app/main/default/objects/At_Risk__c/fields/Cancellation_Date_when_notified__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date_when_notified__c</fullName>
    <label>Cancellation Date (when notified)</label>
    <type>Date</type>
</CustomField>