force-app/main/default/objects/At_Risk__c/fields/Contracted_Asset__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracted Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>Asset__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>At Risk</relationshipLabel>
    <relationshipName>At_Risk</relationshipName>
    <type>Lookup</type>
</CustomField>