force-app/main/default/objects/At_Risk__c/fields/Creator_s_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Creator_s_Business_Unit__c</fullName>
    <formula>TEXT(CreatedBy.Business_Unit__c)</formula>
    <label>Creator&apos;s Business Unit</label>
    <type>Text</type>
</CustomField>