force-app/main/default/objects/At_Risk__c/fields/Early_Termination__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early Termination?</label>
    <type>Checkbox</type>
</CustomField>