force-app/main/default/objects/At_Risk__c/fields/IVG__c.field-meta.xml
<CustomField>
    <fullName>IVG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IVG</label>
    <type>Checkbox</type>
</CustomField>