force-app/main/default/objects/At_Risk__c/fields/IVG_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IVG_Contract_End_Date__c</fullName>
    <label>IVG Contract End Date</label>
    <type>Date</type>
</CustomField>