force-app/main/default/objects/At_Risk__c/fields/Known_Issues__c.field-meta.xml
<CustomField>
    <fullName>Known_Issues__c</fullName>
    <label>Known Issues</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lockup</fullName>
            </value>
            <value>
                <fullName>Blue Screen</fullName>
            </value>
            <value>
                <fullName>Whitelines</fullName>
            </value>
            <value>
                <fullName>Intermittent Failures</fullName>
            </value>
            <value>
                <fullName>Half-Screen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>