force-app/main/default/objects/At_Risk__c/fields/MCP110__c.field-meta.xml
<CustomField>
    <fullName>MCP110__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MCP110</label>
    <type>Checkbox</type>
</CustomField>