force-app/main/default/objects/At_Risk__c/fields/MCP110_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MCP110_Contract_End_Date__c</fullName>
    <label>MCP110 Contract End Date</label>
    <type>Date</type>
</CustomField>