force-app/main/default/objects/At_Risk__c/fields/MCP200__c.field-meta.xml
<CustomField>
    <fullName>MCP200__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MCP200</label>
    <type>Checkbox</type>
</CustomField>