force-app/main/default/objects/At_Risk__c/fields/MCP200_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MCP200_Contract_End_Date__c</fullName>
    <label>MCP200 Contract End Date</label>
    <type>Date</type>
</CustomField>