force-app/main/default/objects/At_Risk__c/fields/MCP50__c.field-meta.xml
<CustomField>
    <fullName>MCP50__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MCP50</label>
    <type>Checkbox</type>
</CustomField>