force-app/main/default/objects/At_Risk__c/fields/MCP50_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MCP50_Contract_End_Date__c</fullName>
    <label>MCP50 Contract End Date</label>
    <type>Date</type>
</CustomField>