force-app/main/default/objects/At_Risk__c/fields/Other_Problem_Area__c.field-meta.xml
<CustomField>
    <fullName>Other_Problem_Area__c</fullName>
    <description>Provide a brief title for the issue if Alert Type, Product, or Application equals &quot;Other&quot; (50 character limit).</description>
    <inlineHelpText>Provide a brief title for the issue if Alert Type, Product, or Application equals &quot;Other&quot; (50 character limit).</inlineHelpText>
    <label>Other Problem Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>