force-app/main/default/objects/At_Risk__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, this At Risk item will populate the At Risk Alert pop-up at the Account level.</description>
    <inlineHelpText>If checked, this At Risk item will populate the At Risk Alert pop-up at the Account level.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>