force-app/main/default/objects/At_Risk__c/fields/Problem_Statement__c.field-meta.xml
<CustomField>
    <fullName>Problem_Statement__c</fullName>
    <description>Brief statement of the problem (255 character limit).</description>
    <inlineHelpText>Brief statement of the problem (255 character limit). For cancellations please include why the customer is leaving, if known.</inlineHelpText>
    <label>Problem Statement</label>
    <type>TextArea</type>
</CustomField>