force-app/main/default/objects/At_Risk__c/fields/Product_Lines_Being_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Product_Lines_Being_Cancelled__c</fullName>
    <formula>IF(XRS__c = TRUE, &quot;XRS &quot;, &quot;&quot;)&amp;&quot;&quot;&amp;
IF(IVG__c = TRUE, &quot;IVG &quot;, &quot;&quot;)&amp;&quot;&quot;&amp;
IF(MCP50__c = TRUE, &quot;MCP50 &quot;, &quot;&quot;)&amp;&quot;&quot;&amp;
IF(MCP110__c = TRUE, &quot;MCP110 &quot;, &quot;&quot;)&amp;&quot;&quot;&amp;
IF(MCP200__c = TRUE, &quot;MCP200 &quot;, &quot;&quot;)&amp;&quot;&quot;&amp;
IF(TT150__c = TRUE, &quot;TT150 &quot;, &quot;&quot;)&amp;&quot;&quot;&amp;
IF(TT210__c = TRUE, &quot;TT210 &quot;, &quot;&quot;)&amp;&quot;&quot;&amp;
IF(RNA_RDC__c = TRUE, &quot;RNA/RDC &quot;, &quot;&quot;)&amp;&quot;&quot;&amp;
IF(RNT__c = TRUE, &quot;RNT &quot;, &quot;&quot;)&amp;&quot;&quot;&amp;
IF(RTS__c = TRUE, &quot;RTS &quot;, &quot;&quot;)&amp;&quot;&quot;&amp;
IF(Sylectus__c = TRUE , &quot;Sylectus&quot;, &quot;&quot;)</formula>
    <label>Product Lines Being Cancelled</label>
    <type>Text</type>
</CustomField>