force-app/main/default/objects/At_Risk__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Brief statement of the resolution that closed this Alert or At Risk event (1,000 character limit).</description>
    <inlineHelpText>Brief statement of the resolution that closed this Alert or At Risk event (1,000 character limit).</inlineHelpText>
    <label>Resolution</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>