force-app/main/default/objects/At_Risk__c/fields/RN_SaaS_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RN_SaaS_Contract_End_Date__c</fullName>
    <label>RN SaaS Contract End Date</label>
    <type>Date</type>
</CustomField>