force-app/main/default/objects/At_Risk__c/fields/RNA_RDC__c.field-meta.xml
<CustomField>
    <fullName>RNA_RDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RNA/RDC</label>
    <type>Checkbox</type>
</CustomField>