force-app/main/default/objects/At_Risk__c/fields/RNT__c.field-meta.xml
<CustomField>
    <fullName>RNT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RNT</label>
    <type>Checkbox</type>
</CustomField>