force-app/main/default/objects/At_Risk__c/fields/RNT_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RNT_Contract_End_Date__c</fullName>
    <label>RNT Contract End Date</label>
    <type>Date</type>
</CustomField>