force-app/main/default/objects/At_Risk__c/fields/RTS__c.field-meta.xml
<CustomField>
    <fullName>RTS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RTS</label>
    <type>Checkbox</type>
</CustomField>