force-app/main/default/objects/At_Risk__c/fields/RTS_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>RTS_Contract_End_Date__c</fullName>
    <label>RTS Contract End Date</label>
    <type>Date</type>
</CustomField>