force-app/main/default/objects/At_Risk__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Owner: Customer Success, Finance
Indicates the customer sentiment as follows:
Green – Through your communications with and support of the customer, their response has been generally favorable or neutral, and you have high confidence that this customer is in good status with Omnitracs
Yellow – Through your communications with and support of the customer, they have expressed concerns, the conversations have not been mostly constructive, but you still have some level of confidence that when the issues are resolved, that we can move forward with the customer – but there is still risk
Red – Through your communications with and support of the customer, you have experience very negative responses from the customer, they openly discussed competitors or that they will be leaving Omnitracs, or that you just feel the risk is high for turnover
Black – This customer is already out the door.  They are already transitioning to a competitor.</description>
    <inlineHelpText>Select the sentiment for this at risk customer - Green (favorable), Yellow (has concerns but manageable), Red negative responses and/or possibly leaving), or Black (already transitioning to competitor).</inlineHelpText>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
                <default>true</default>
                <label>Red</label>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>