force-app/main/default/objects/At_Risk__c/fields/Severity_Copy__c.field-meta.xml
<CustomField>
    <fullName>Severity_Copy__c</fullName>
    <description>Displays value &apos;Medium&apos; for severity &apos;Yellow&apos; and &apos;Critical&apos; for &apos;Red&apos;. This is used in email templates. This field can be removed if business agrees to change Severity values to Critical and Medium.</description>
    <formula>CASE(Severity__c, &apos;Yellow&apos;, &apos;Medium&apos;, &apos;Red&apos;, &apos;Critical&apos;,&apos;&apos;)</formula>
    <label>Severity Copy</label>
    <type>Text</type>
</CustomField>