force-app/main/default/objects/At_Risk__c/fields/Sylectus__c.field-meta.xml
<CustomField>
    <fullName>Sylectus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sylectus</label>
    <type>Checkbox</type>
</CustomField>