force-app/main/default/objects/At_Risk__c/fields/Sylectus_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Sylectus_Contract_End_Date__c</fullName>
    <label>Sylectus Contract End Date</label>
    <type>Date</type>
</CustomField>