force-app/main/default/objects/At_Risk__c/fields/TT150__c.field-meta.xml
<CustomField>
    <fullName>TT150__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TT150</label>
    <type>Checkbox</type>
</CustomField>