force-app/main/default/objects/At_Risk__c/fields/TT150_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TT150_Contract_End_Date__c</fullName>
    <label>TT150 Contract End Date</label>
    <type>Date</type>
</CustomField>