force-app/main/default/objects/At_Risk__c/fields/TT210__c.field-meta.xml
<CustomField>
    <fullName>TT210__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TT210</label>
    <type>Checkbox</type>
</CustomField>