force-app/main/default/objects/At_Risk__c/fields/TT210_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TT210_Contract_End_Date__c</fullName>
    <label>TT210 Contract End Date</label>
    <type>Date</type>
</CustomField>