force-app/main/default/objects/At_Risk__c/fields/XRS__c.field-meta.xml
<CustomField>
    <fullName>XRS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XRS</label>
    <type>Checkbox</type>
</CustomField>