force-app/main/default/objects/At_Risk__c/fields/XRS_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>XRS_Contract_End_Date__c</fullName>
    <label>XRS Contract End Date</label>
    <type>Date</type>
</CustomField>