force-app/main/default/objects/At_Risk__c/recordTypes/At_Risk.recordType-meta.xml
<RecordType>
    <fullName>At_Risk</fullName>
    <active>true</active>
    <description>To be used for At Risk customer events (green, yellow, and red)</description>
    <label>At Risk</label>
</RecordType>