force-app/main/default/objects/At_Risk__c/recordTypes/Cancellation_Request.recordType-meta.xml
<RecordType>
    <fullName>Cancellation_Request</fullName>
    <active>true</active>
    <description>To be used for customer cancellation requests.</description>
    <label>Cancellation Request</label>
</RecordType>