force-app/main/default/objects/At_Risk__c/validationRules/At_Risk_cannot_be_closed_wo_resolution.validationRule-meta.xml
<ValidationRule>
    <fullName>At_Risk_cannot_be_closed_wo_resolution</fullName>
    <active>true</active>
    <description>An At Risk item cannot be closed without a resolution.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&quot;Closed&quot;),
ISBLANK(Resolution__c)


)</errorConditionFormula>
    <errorMessage>Enter At Risk resolution. An At Risk item cannot be closed without a resolution. Please populate the resolution field to save the record.</errorMessage>
</ValidationRule>